FIX overflow carrusel

--- a/Public/Css/Main/Review.css
+++ b/Public/Css/Main/Review.css
@@ -62,7 +62,7 @@
         }
 
         .review-list{
-            overflow: overlay;
+            overflow: auto;
         }
 
         .home_review_txt {
