--- a/Public/Css/Main/ShowProduct-Section.css
+++ b/Public/Css/Main/ShowProduct-Section.css
@@ -51,7 +51,7 @@
 
         .products_line{
             gap: 1rem;
-            overflow: overlay;
+            overflow: auto;
         }
     }
 }
